Add jpa & hibernate on backend-java-21

--- a/java-21/eclipse/starter-app/src/main/resources/application.properties
+++ b/java-21/eclipse/starter-app/src/main/resources/application.properties
@@ -1,1 +1,37 @@
+# === Application Info ===
 spring.application.name=starter-app
+
+# === Database Client (mock | pg | mysql) ===
+db.client=mysql
+
+# === PostgreSQL ===
+db-pg-host=localhost
+db-pg-port=5432
+db-pg-database=backend_javascript
+db-pg-user=postgres
+db-pg-password=Trustno1
+
+# === MySQL ===
+db-mysql-host=localhost
+db-mysql-port=3306
+db-mysql-database=backend_javascript
+db-mysql-user=root
+db-mysql-password=Trustno1
+
+# === Hibernate / JPA ===
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+## === PostgreSQL ===
+#spring.datasource.url=jdbc:postgresql://${db-pg-host}:${db-pg-port}/${db-pg-database}
+#spring.datasource.username=${db-pg-user}
+#spring.datasource.password=${db-pg-password}
+#spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+# === MySQL Datasource ===
+spring.datasource.url=jdbc:mysql://${db-mysql-host}:${db-mysql-port}/${db-mysql-database}
+spring.datasource.username=${db-mysql-user}
+spring.datasource.password=${db-mysql-password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
