improve jpa & hibernate on backend-java-21

--- a/java-21/eclipse/starter-app/src/main/resources/application.properties
+++ b/java-21/eclipse/starter-app/src/main/resources/application.properties
@@ -2,7 +2,17 @@
 spring.application.name=starter-app
 
 # === Database Client (mock | pg | mysql) ===
-db.client=mysql
+#db.client=mock
+db.client=pg
+
+#spring.autoconfigure.exclude=\
+#org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
+#org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
+
+# === Hibernate / JPA ===
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 
 # === PostgreSQL ===
 db-pg-host=localhost
@@ -18,9 +28,7 @@ db-mysql-database=backend_javascript
 db-mysql-user=root
 db-mysql-password=Trustno1
 
-# === Hibernate / JPA ===
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+
 
 
 ## === PostgreSQL ===
@@ -30,8 +38,8 @@ spring.jpa.show-sql=true
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 
-# === MySQL Datasource ===
-spring.datasource.url=jdbc:mysql://${db-mysql-host}:${db-mysql-port}/${db-mysql-database}
-spring.datasource.username=${db-mysql-user}
-spring.datasource.password=${db-mysql-password}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+## === MySQL Datasource ===
+#spring.datasource.url=jdbc:mysql://${db-mysql-host}:${db-mysql-port}/${db-mysql-database}
+#spring.datasource.username=${db-mysql-user}
+#spring.datasource.password=${db-mysql-password}
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
