--- a/java-21/eclipse/starter-app/src/main/resources/application.properties
+++ b/java-21/eclipse/starter-app/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-# === Application Mode ===
-db.client=mock
+# === Database Client (mock | pg | mysql) ===
+db.client=mysql
 
-# === Désactivation SQL / Hibernate ===
-spring.autoconfigure.exclude=\
-org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration,\
-org.springframework.boot.autoconfigure.data.jpa.JpaRepositoriesAutoConfiguration
+# === Application ===
+spring.application.name=starter-app
+server.port=8080
