--- a/java-21/backend-java-21/pom.xml
+++ b/java-21/backend-java-21/pom.xml
@@ -48,6 +48,13 @@
             <version>${jersey.version}</version>
         </dependency>
         
+	    <dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter</artifactId>
+		    <version>5.10.2</version>
+		    <scope>test</scope>
+		</dependency>
+		
         <!-- Jersey Injection -->
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
@@ -77,6 +84,28 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            
+            
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.8.11</version>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>prepare-agent</goal>
+			            </goals>
+			        </execution>
+			        <execution>
+			            <id>report</id>
+			            <phase>verify</phase>
+			            <goals>
+			                <goal>report</goal>
+			            </goals>
+			        </execution>
+			    </executions>
+			</plugin>
+            
         </plugins>
     </build>
 </project>
