--- a/java-21/backend-spring-21/pom.xml
+++ b/java-21/backend-spring-21/pom.xml
@@ -38,6 +38,71 @@
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+    
+	<dependency>
+	  <groupId>org.junit.jupiter</groupId>
+	  <artifactId>junit-jupiter</artifactId>
+	  <version>5.10.2</version>
+	  <scope>test</scope>
+	</dependency>
+    
   </dependencies>
+  
+  
+  <build>
+  <plugins>
+  
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.2.5</version>
+    </plugin>
+    
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-checkstyle-plugin</artifactId>
+      <version>3.3.0</version>
+      <executions>
+        <execution>
+          <phase>verify</phase>
+          <goals>
+            <goal>check</goal>
+          </goals>
+        </execution>
+      </executions>
+      <configuration>
+        <configLocation>google_checks.xml</configLocation>
+        <encoding>UTF-8</encoding>
+        <consoleOutput>true</consoleOutput>
+        <failsOnError>true</failsOnError>
+      </configuration>
+    </plugin>
+
+
+	<plugin>
+	  <groupId>org.jacoco</groupId>
+	  <artifactId>jacoco-maven-plugin</artifactId>
+	  <version>0.8.11</version>
+	  <executions>
+	    <execution>
+	      <id>prepare-agent</id>
+	      <goals>
+	        <goal>prepare-agent</goal>
+	      </goals>
+	    </execution>
+	    <execution>
+	      <id>report</id>
+	      <phase>verify</phase>
+	      <goals>
+	        <goal>report</goal>
+	      </goals>
+	    </execution>
+	  </executions>
+	</plugin>
+
+    
+  </plugins>
+</build>
+
 
 </project>
