--- a/java-21/backend-springboot-21/pom.xml
+++ b/java-21/backend-springboot-21/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <groupId>com.example</groupId>
-  <artifactId>backend-java</artifactId>
+  <artifactId>backend-springboot-21</artifactId>
   <version>1.0.0</version>
   <name>backend-java</name>
   <description>Demo backend-java</description>
