--- a/java-21/starter/backend-java-21/pom.xml
+++ b/java-21/starter/backend-java-21/pom.xml
@@ -90,6 +90,11 @@
 			    <groupId>org.jacoco</groupId>
 			    <artifactId>jacoco-maven-plugin</artifactId>
 			    <version>0.8.11</version>
+				 <configuration>
+				    <excludes>
+				      <exclude>scripts/**</exclude>
+				    </excludes>
+				  </configuration>			    
 			    <executions>
 			        <execution>
 			            <goals>
