improve pom.xml versions on backend-spring

--- a/prototypes/starter/backend-spring/pom.xml
+++ b/prototypes/starter/backend-spring/pom.xml
@@ -19,7 +19,9 @@
     <jackson.version>2.19.1</jackson.version>
     <jakarta.servlet.version>6.1.0</jakarta.servlet.version>
     <junit.version>6.0.0-M1</junit.version>
-
+    <jacoco.version>0.8.11</jacoco.version>
+    <hamcrest.version>3.0</hamcrest.version>
+    <json-path.version>2.9.0</json-path.version>
     <surefire.plugin.version>3.2.5</surefire.plugin.version>
     <checkstyle.plugin.version>3.3.0</checkstyle.plugin.version>
     <jacoco.plugin.version>0.8.11</jacoco.plugin.version>
@@ -42,6 +44,25 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    
+    <dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-test</artifactId>
+	    <version>${spring.version}</version>
+	    <scope>test</scope>
+	</dependency>
+	<dependency>
+	    <groupId>org.hamcrest</groupId>
+	    <artifactId>hamcrest</artifactId>
+	    <version>${hamcrest.version}</version>
+	    <scope>test</scope>
+	</dependency>	
+	<dependency>
+	    <groupId>com.jayway.jsonpath</groupId>
+	    <artifactId>json-path</artifactId>
+	    <version>${json-path.version}</version>
+	    <scope>test</scope>
+	</dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -55,6 +76,7 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    
   </dependencies>
 
   <build>
@@ -84,26 +106,30 @@
         </dependencies>
     </plugin>
 
-      <plugin>
+    <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco.plugin.version}</version>
+        <version>${jacoco.version}</version>
+        <configuration>
+            <excludes>
+                <exclude>scripts/**</exclude>
+            </excludes>
+        </configuration>
         <executions>
-          <execution>
-            <id>prepare-agent</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>report</id>
-            <phase>verify</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
+            <execution>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
+            </execution>
+            <execution>
+                <id>report</id>
+                <phase>verify</phase>
+                <goals>
+                    <goal>report</goal>
+                </goals>
+            </execution>
         </executions>
-      </plugin>
+    </plugin>
 
     </plugins>
   </build>
