--- a/prototypes/starter/backend-spring-8/pom.xml
+++ b/prototypes/starter/backend-spring-8/pom.xml
@@ -12,25 +12,30 @@
       <java.version>1.8</java.version>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
+      
+      <spring-webmvc.version>5.2.22.RELEASE</spring-webmvc.version>
+      <jackson-databind.version>2.15.0</jackson-databind.version>
+      <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+      
     </properties>
 
     <dependencies>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>5.2.22.RELEASE</version>
+        <version>${spring-webmvc.version}</version>
       </dependency>
 
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.15.0</version>
+        <version>${jackson-databind.version}</version>
       </dependency>
 
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
-        <version>4.0.1</version>
+        <version>${javax.servlet-api.version}</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
