--- a/prototypes/examples-angular/package.json
+++ b/prototypes/examples-angular/package.json
@@ -7,7 +7,10 @@
     "lint-starter": "nx lint angular-starter",
     "test-starter": "nx test angular-starter",
     "build-starter": "nx build angular-starter",
-    "e2e-starter": "nx e2e angular-starter-e2e"
+    "start-component": "nx serve angular-component",
+    "lint-component": "nx lint angular-component",
+    "test-component": "nx test angular-component",
+    "build-component": "nx build angular-component"
   },
   "private": true,
   "dependencies": {
