--- a/springboot/springboot-starter-tests/pom.xml
+++ b/springboot/springboot-starter-tests/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.ganatan</groupId>
 	<artifactId>springboot-starter-tests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>springboot-starter</name>
+	<name>springboot-starter-tests</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
@@ -34,6 +34,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -47,6 +48,28 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			
+			<plugin>
+			    <groupId>org.jacoco</groupId>
+			    <artifactId>jacoco-maven-plugin</artifactId>
+			    <version>0.8.12</version>
+			    <executions>
+			      <execution>
+			        <goals>
+			          <goal>prepare-agent</goal>
+			        </goals>
+			      </execution>
+			      <execution>
+			        <id>report</id>
+			        <phase>verify</phase>
+			        <goals>
+			          <goal>report</goal>
+			        </goals>
+			      </execution>
+			    </executions>
+			</plugin>
+			
 		</plugins>
 	</build>
 
