--- a/springboot/01-starter-rabbitmq/docker/docker-compose.rabbitmq.yml
+++ b/springboot/01-starter-rabbitmq/docker/docker-compose.rabbitmq.yml
@@ -5,5 +5,14 @@ services:
     image: rabbitmq:3-management
     container_name: rabbitmq
     ports:
-      - "5672:5672"   # communication AMQP
-      - "15672:15672" # interface web
+      - "5672:5672"   # port AMQP pour Spring Boot
+      - "15672:15672" # interface web RabbitMQ
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    networks:
+      - backend-net
+
+networks:
+  backend-net:
+    driver: bridge
