Add gitlab-ci on springboot-starter-bootstrap

--- a/angular/01-angular-starter-bootstrap/package.json
+++ b/angular/01-angular-starter-bootstrap/package.json
@@ -7,7 +7,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "coverage": "ng test --no-watch --code-coverage"
+    "coverage": "ng test --no-watch --code-coverage",
+    "docker:list-containers": "docker ps -a",
+    "docker:list-images": "docker images",
+    "docker:list-volumes": "docker volume ls",
+    "docker:app-build": "docker build -t frontend-angular -f docker/Dockerfile.frontend-angular .",
+    "docker:app-run": "docker run -d --name frontend-angular -p 4000:80 frontend-angular",
+    "docker:app-stop": "docker stop frontend-angular && docker rm frontend-angular",
+    "docker:app-clean": "docker rm -f frontend-angular && docker rmi -f frontend-angular",
+    "docker:app-logs": "docker logs -f frontend-angular"
   },
   "prettier": {
     "printWidth": 100,
@@ -23,12 +31,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "20.3.0",
-    "@angular/compiler": "20.3.0",
-    "@angular/core": "20.3.0",
-    "@angular/forms": "20.3.0",
-    "@angular/platform-browser": "20.3.0",
-    "@angular/router": "20.3.0",
+    "@angular/common": "20.3.1",
+    "@angular/compiler": "20.3.1",
+    "@angular/core": "20.3.1",
+    "@angular/forms": "20.3.1",
+    "@angular/platform-browser": "20.3.1",
+    "@angular/router": "20.3.1",
     "@fortawesome/fontawesome-free": "7.0.1",
     "bootstrap": "5.3.8",
     "rxjs": "7.8.2",
@@ -36,9 +44,9 @@
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "20.3.1",
-    "@angular/cli": "20.3.1",
-    "@angular/compiler-cli": "20.3.0",
+    "@angular/build": "20.3.2",
+    "@angular/cli": "20.3.2",
+    "@angular/compiler-cli": "20.3.1",
     "@types/jasmine": "5.1.9",
     "jasmine-core": "5.10.0",
     "karma": "6.4.4",
