--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,3 @@
-stages: [install, lint, test, build]
+stages: [install, test, build]
 include:
   - local: ./angular/01-angular-starter-bootstrap/.gitlab-ci.yml
