--- a/angular/01-angular-starter-bootstrap/.gitlab-ci.yml
+++ b/angular/01-angular-starter-bootstrap/.gitlab-ci.yml
@@ -9,6 +9,16 @@ install_frontend_angular:
     - node -v
     - npm ci
 
+test_frontend_angular:
+  stage: test
+  image: node:20
+  script:
+    - cd "${PROJECT_DIR:-.}"
+    - echo "🧪 Running unit tests for Angular Starter Bootstrap"
+    - npm run test -- --watch=false --browsers=ChromeHeadless
+  dependencies:
+    - install_frontend_angular
+
 # stages:
 #   - install
 
@@ -18,14 +28,6 @@ install_frontend_angular:
 #   script:
 #     - npm ci
 
-# test:bootstrap:
-#   stage: test
-#   image: node:20
-#   script:
-#     - echo "Running unit tests for Angular Starter Bootstrap"
-#     - npm run test -- --watch=false --browsers=ChromeHeadless
-#   dependencies:
-#     - install:bootstrap
 
 # build:bootstrap:
 #   stage: build
