--- a/angular/01-angular-starter-bootstrap/.gitlab-ci.yml
+++ b/angular/01-angular-starter-bootstrap/.gitlab-ci.yml
@@ -5,6 +5,8 @@ install_frontend_angular:
     - cd "${PROJECT_DIR:-.}"
     - echo "📂 Checking files before npm ci"
     - ls -la
+    - echo "✅ Node version:"
+    - node -v
     - npm ci
   script:
     - echo "✅ Node version:"
