check package-log

--- a/angular/01-angular-starter-bootstrap/.gitlab-ci.yml
+++ b/angular/01-angular-starter-bootstrap/.gitlab-ci.yml
@@ -2,18 +2,7 @@ install_frontend_angular:
   stage: install
   image: node:20
   script:
-    - cd "${PROJECT_DIR:-.}"
-    - echo "📂 Checking files before npm ci"
-    - ls -la
-    - echo "✅ Node version:"
-    - node -v
-    - npm ci
-
-test_frontend_angular:
-  stage: install
-  image: node:20
-  script:
-    - cd "${PROJECT_DIR:-.}"
+    - cd angular/01-angular-starter-bootstrap
     - echo "📂 Checking files before npm ci"
     - ls -la
     - echo "✅ Node version:"
