--- a/.gitlab/angular/01-angular-starter-bootstrap.yml
+++ b/.gitlab/angular/01-angular-starter-bootstrap.yml
@@ -1,23 +1,29 @@
+stages:
+  - install
+  - test
+
 install:angular-starter-bootstrap:
   stage: install
   image: node:20
   script:
     - cd angular/01-angular-starter-bootstrap
-    - echo "📂 Checking files before npm ci"
-    - ls -la
-    - echo "✅ Node version:"
-    - node -v
+    - echo "📦 Installing dependencies"
     - npm ci
+  artifacts:
+    paths:
+      - angular/01-angular-starter-bootstrap/node_modules/
+    expire_in: 1h
 
 test:angular-starter-bootstrap:
   stage: test
   image: node:20
   script:
     - cd angular/01-angular-starter-bootstrap
-    - echo "Running unit tests for Angular Starter Bootstrap"
+    - echo "🧪 Running unit tests"
     - npm run test -- --watch=false --browsers=ChromeHeadless
   dependencies:
     - install:angular-starter-bootstrap
+
 
 # stages:
 #   - install
