--- a/.gitlab/angular/01-angular-starter-bootstrap.yml
+++ b/.gitlab/angular/01-angular-starter-bootstrap.yml
@@ -1,29 +1,44 @@
-stages:
-  - install
-  - test
+.default_node_job:
+  image: node:20
+  before_script:
+    - cd angular/01-angular-starter-bootstrap
 
-install:angular-starter-bootstrap:
+install:angular-bootstrap:
   stage: install
-  image: node:20
+  extends: .default_node_job
   script:
-    - cd angular/01-angular-starter-bootstrap
-    - echo "📦 Installing dependencies"
     - npm ci
-  artifacts:
-    paths:
-      - angular/01-angular-starter-bootstrap/node_modules/
-    expire_in: 1h
 
-test:angular-starter-bootstrap:
+test:angular-bootstrap:
   stage: test
-  image: node:20
+  extends: .default_node_job
   script:
-    - cd angular/01-angular-starter-bootstrap
-    - echo "🧪 Running unit tests"
-    - npm run test -- --watch=false --browsers=ChromeHeadless
-  dependencies:
-    - install:angular-starter-bootstrap
+    - echo "Installing dependencies"
+# stages:
+#   - install
+#   - test
 
+# install:angular-starter-bootstrap:
+#   stage: install
+#   image: node:20
+#   script:
+#     - cd angular/01-angular-starter-bootstrap
+#     - echo "📦 Installing dependencies"
+#     - npm ci
+#   artifacts:
+#     paths:
+#       - angular/01-angular-starter-bootstrap/node_modules/
+#     expire_in: 1h
+
+# test:angular-starter-bootstrap:
+#   stage: test
+#   image: node:20
+#   script:
+#     - cd angular/01-angular-starter-bootstrap
+#     - echo "🧪 Running unit tests"
+#     - npm run test -- --watch=false --browsers=ChromeHeadless
+#   dependencies:
+#     - install:angular-starter-bootstrap
 
 # stages:
 #   - install
