--- a/angular/01-angular-starter-bootstrap/package.json
+++ b/angular/01-angular-starter-bootstrap/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:ci": "ng test --watch=false --browsers=ChromeHeadlessNoSandbox",
     "ng:version": "ng --version",
     "coverage": "ng test --no-watch --code-coverage",
     "docker:list-containers": "docker ps -a",
